--- a/cgb-solutions-frontend/src/components/Navbar/Navbar.css
+++ b/cgb-solutions-frontend/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
 
 .navbar {
   background-color: #ffffff;
-  box-shadow: 0 4px 2px -2px gray;
+  /* box-shadow: 0 4px 2px -2px gray; */
   position: sticky;
   top: 0;
   z-index: 1000;
