--- a/cgb-solutions-frontend/src/components/Home/Home.css
+++ b/cgb-solutions-frontend/src/components/Home/Home.css
@@ -77,7 +77,7 @@ h2 {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  /* -webkit-line-clamp: 3; */
   -webkit-box-orient: vertical;
   white-space: normal;
 }
