--- a/cgb-solutions-frontend/src/components/Home/Home.css
+++ b/cgb-solutions-frontend/src/components/Home/Home.css
@@ -1,71 +1,3 @@
-/* @keyframes fadeInOut {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-.welcome {
-  color: #d67e25;
-  font-family: "Lobster", cursive;
-  animation: fadeInOut 5s linear infinite;
-  font-weight: bold;
-}
-
-h1 {
-  font-family: "Noto Serif";
-  margin-bottom: 100px;
-}
-
-h2 {
-  color: #0d4278;
-  font-size: 90px;
-}
-
-.welcome {
-  font-size: 100px;
-}
-
-.background-image {
-  background-image: url("../../images/book.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-#mainDiv {
-  background-color: #effafc;
-  padding-top: 50px;
-}
-
-.quotes {
-  margin-top: 150px;
-}
-
-@media (max-width: 767px) {
-  .welcome {
-    font-size: 2rem;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-  }
-} */
-
-/* ============================================ */
-
 .blog {
   margin-bottom: 20px;
   margin-left: 40px;
@@ -77,18 +9,37 @@ h2 {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
   white-space: normal;
   text-align: justify;
+  /* font-family: "Playfair Display", sans-serif; */
+  font-family: "Times New Roman", Times, serif;
   /* padding: 0 50px; */
 }
 
 .image-container {
   height: 240px;
   overflow: hidden;
-  padding: 20px;
-  margin-bottom: 0px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.blog-title,
+.blog-userName {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.blog-title {
+  margin-top: 10px;
+}
+
+.blog-title a {
+  color: black;
+  text-decoration: none;
+}
+
+.blog-title a:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 600px) {
