--- a/cgb-solutions-frontend/src/components/Navbar/Navbar.css
+++ b/cgb-solutions-frontend/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 #brand-logo {
   width: 130px;
   margin-left: 50px;
-  margin-right: 400px;
+  font-family: "Anton", sans-serif;
 }
 
 .navbar-nav .nav-link {
@@ -9,13 +9,11 @@
   font-family: "Playfair Display", sans-serif;
   font-size: 18px;
   text-decoration: none;
-  margin-right: 20px;
   border-bottom: 3px solid transparent;
 }
 
 .navbar {
   background-color: #ffffff;
-  /* box-shadow: 0 4px 2px -2px gray; */
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -51,6 +49,10 @@
   color: white;
 }
 
+.nav-btn {
+  margin-left: 1100px;
+}
+
 .modal-header {
   background-color: #effafc;
   border-bottom: 1px solid #90a5ba;
@@ -76,6 +78,7 @@
     font-size: 16px;
     margin-right: 10px;
   }
+
   .login-button,
   .logout-button .signup-button {
     font-size: 12px;
