home and blog page css doone

--- a/cgb-solutions-frontend/src/components/Login/Login.css
+++ b/cgb-solutions-frontend/src/components/Login/Login.css
@@ -17,6 +17,21 @@ input {
   text-transform: capitalize;
 }
 
+.modal-header {
+  background-color: #effafc;
+  border-bottom: 1px solid #90a5ba;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-title {
+  color: #0d4278;
+  font-size: 24px;
+  font-family: "Playfair Display", sans-serif;
+}
+
 btn btn-primary,
 .login-text,
 .submit {
