--- a/cgb-solutions-frontend/src/components/EditModal/EditModal.css
+++ b/cgb-solutions-frontend/src/components/EditModal/EditModal.css
@@ -1,4 +1,4 @@
-label {
+/* label {
   display: block;
   margin-bottom: 5px;
   font-size: 16px;
@@ -34,4 +34,4 @@ btn btn-primary {
   color: red;
   margin-top: 5px;
   text-transform: capitalize;
-}
+} */
