--- a/cgb-solutions-frontend/src/components/Navbar/Navbar.css
+++ b/cgb-solutions-frontend/src/components/Navbar/Navbar.css
@@ -50,7 +50,7 @@
 }
 
 .nav-btn {
-  margin-left: 1100px;
+  margin-left: 1000px;
 }
 
 .modal-header {
@@ -80,7 +80,8 @@
   }
 
   .login-button,
-  .logout-button .signup-button {
+  .logout-button,
+  .signup-button {
     font-size: 12px;
     margin-right: 10px;
     padding: 3px 8px;
@@ -102,4 +103,18 @@
   #brand-logo {
     margin-right: 0;
   }
+}
+
+.create-blog-button {
+  font-family: "Playfair Display", sans-serif;
+  color: #0d4278;
+  border-color: #0d4278;
+  box-shadow: 0 0 10px rgba(13, 66, 120, 0.5);
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.create-blog-button:hover {
+  background-color: #0d4278;
+  color: white;
 }
