--- a/cgb-solutions-frontend/src/components/Navbar/Navbar.css
+++ b/cgb-solutions-frontend/src/components/Navbar/Navbar.css
@@ -50,7 +50,7 @@
 }
 
 .nav-btn {
-  margin-left: 1000px;
+  margin-left: 900px;
 }
 
 .modal-header {
@@ -115,6 +115,20 @@
 }
 
 .create-blog-button:hover {
+  background-color: #0d4278;
+  color: white;
+}
+
+.your-blog-button {
+  font-family: "Playfair Display", sans-serif;
+  color: #0d4278;
+  border-color: #0d4278;
+  box-shadow: 0 0 10px rgba(13, 66, 120, 0.5);
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.your-blog-button:hover {
   background-color: #0d4278;
   color: white;
 }
