--- a/cgb-solutions-frontend/src/components/Blog/Blog.css
+++ b/cgb-solutions-frontend/src/components/Blog/Blog.css
@@ -1,5 +1,3 @@
-/* Blog.css  */
-
 .bannerImage {
   display: flex;
   justify-content: center;
@@ -11,7 +9,8 @@
   width: 100%;
   max-height: 400px;
   object-fit: cover;
-  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .contentImage img {
@@ -31,11 +30,13 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 20px;
 }
 
 .blog h2 {
   font-size: 2rem;
   margin-bottom: 10px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .summary-part {
@@ -49,12 +50,86 @@
   font-family: "Times New Roman", Times, serif;
 }
 
+.title {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.blog-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.edit-button,
+.delete-button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+}
+
+.edit-button {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+@media (max-width: 991px) {
+  .title,
+  .date-author {
+    padding: 0 20px 10px 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .title,
+  .date-author {
+    padding: 0 10px 10px 10px;
+  }
+
+  .summary-blog {
+    padding: 0 20px;
+  }
+
+  .blog-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .edit-button,
+  .delete-button {
+    margin-bottom: 10px;
+  }
+}
+
 @media (max-width: 600px) {
-  .summary {
+  .summary-blog {
     padding: 0 10px;
   }
 
   .contentImage {
     margin: 10px 0;
+  }
+
+  .bannerImage img,
+  .contentImage img {
+    max-height: 250px;
+  }
+
+  .blog h2 {
+    font-size: 1.5rem;
+  }
+
+  .edit-button,
+  .delete-button {
+    padding: 8px 16px;
+    font-size: 0.9rem;
   }
 }
