--- a/cgb-solutions-frontend/src/components/Blog/Blog.css
+++ b/cgb-solutions-frontend/src/components/Blog/Blog.css
@@ -63,22 +63,68 @@
 
 .edit-button,
 .delete-button {
-  padding: 10px 20px;
-  font-size: 1rem;
-  cursor: pointer;
+  font-family: "Playfair Display", sans-serif;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #007bff;
   border: none;
-  border-radius: 4px;
-  outline: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .edit-button {
   background-color: #007bff;
-  color: #fff;
+  margin-right: 1240px;
 }
 
 .delete-button {
   background-color: #dc3545;
-  color: #fff;
+}
+
+.edit-button:hover,
+.delete-button:hover {
+  filter: brightness(85%);
+}
+
+@media (max-width: 767px) {
+  .edit-button,
+  .delete-button {
+    width: 100%;
+  }
+}
+
+approval-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.approve-button,
+.reject-button {
+  font-family: "Playfair Display", sans-serif;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #28a745;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.approve-button {
+  margin-right: 1090px;
+}
+.reject-button {
+  background-color: #dc3545;
+}
+
+.approve-button:hover,
+.reject-button:hover {
+  background-color: #218838;
+  color: #ffffff;
 }
 
 @media (max-width: 991px) {
@@ -106,6 +152,18 @@
   .edit-button,
   .delete-button {
     margin-bottom: 10px;
+  }
+
+  .approval-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .approve-button,
+  .reject-button {
+    margin-right: 0;
+    margin-bottom: 10px;
+    width: 100%;
   }
 }
 
