--- a/cgb-solutions-frontend/src/components/Home/Home.css
+++ b/cgb-solutions-frontend/src/components/Home/Home.css
@@ -25,8 +25,19 @@
 .image-container {
   height: 240px;
   overflow: hidden;
-  padding: 10px;
-  margin-bottom: 10px;
+  position: relative;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.3s ease;
+}
+
+.image-container:hover img {
+  transform: scale(1.1);
 }
 
 .blog-content {
@@ -91,4 +102,17 @@
   .image-container {
     padding: 0 !important;
   }
+}
+
+.error {
+  color: red;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.no-blogs-message {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  font-family: "Times New Roman", Times, serif;
 }
