--- a/cgb-solutions-frontend/src/components/YourBlog/YourBlog.css
+++ b/cgb-solutions-frontend/src/components/YourBlog/YourBlog.css
@@ -109,3 +109,16 @@ h2 {
   margin-bottom: 10px;
   margin-top: 10px;
 }
+
+.error {
+  color: red;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.no-blogs-message {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
